<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryWhite"
    tools:context=".activities.HomeAddDeviceFragment">

    <Button
        android:id="@+id/addDeviceBtn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/addDeviceBtnString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/deviceNameET"
        app:layout_constraintStart_toStartOf="@+id/deviceNameET"
        app:layout_constraintTop_toBottomOf="@+id/deviceNameET"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/deviceCodeET"
        style="@style/EditTextStyle"
        android:paddingHorizontal="15dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/registrationCodeHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addDeviceSubheader"
        app:layout_constraintTop_toBottomOf="@+id/addDeviceSubheader"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/deviceNameET"
        style="@style/EditTextStyle"
        android:paddingHorizontal="15dp"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:hint="@string/deviceNameHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/deviceCodeET"
        app:layout_constraintStart_toStartOf="@+id/deviceCodeET"
        app:layout_constraintTop_toBottomOf="@+id/deviceCodeET"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />


    <TextView
        android:id="@+id/addDeviceSubheader"
        style="@style/SubHeaderStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/addDeviceSubHeaderString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addDeviceHeader"
        app:layout_constraintTop_toBottomOf="@+id/addDeviceHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addDeviceHeader"
        style="@style/HeaderStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/addDeviceHeaderString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>