<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.RegisterActivity"
    android:background="@color/primaryWhite">

    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:background="@color/primaryGreen"
        android:gravity="bottom"
        android:theme="@style/RegisterPage"
        app:layout_constraintBottom_toTopOf="@+id/registerPageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/registerPageToolbarTitle"
        app:titleTextAppearance="@style/Toolbar_TextAppearance" />

    <TextView
        android:id="@+id/registerPageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/loginTitle"
        style="@style/HeaderStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/registerPageSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/registerSubTitle"
        style="@style/SubHeaderStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerPageTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/registerPageTitle"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/nameHint"
        android:hint="@string/nameHint"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerPageSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/registerPageSubtitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:autofillHints="@string/emailHint"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        style="@style/EditTextStyle"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerName"
        app:layout_constraintStart_toStartOf="@+id/registerName"
        app:layout_constraintTop_toBottomOf="@+id/registerName"
        app:layout_constraintVertical_bias="0.03"
        app:layout_editor_absoluteY="240sp" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:autofillHints="@string/passwordHint"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        style="@style/EditTextStyle"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerEmail"
        app:layout_constraintStart_toStartOf="@+id/registerEmail"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail"
        app:layout_constraintVertical_bias="0.03"
        app:layout_editor_absoluteY="240sp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:text="@string/registerBtnString"
        style="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword"
        app:layout_constraintVertical_bias="0.13" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>